---
source: src/tests.rs
expression: quad_manager
input_file: src/examples/valid/condition.ra
---
0    - Goto       -     -     1
1    - Lt         3000  3001  2750
2    - GotoF      2750  -     5
3    - Assignment 3000  -     1000
4    - Goto       -     -     10
5    - Lt         3001  3002  2750
6    - GotoF      2750  -     9
7    - Assignment 3001  -     1000
8    - Goto       -     -     10
9    - Assignment 3002  -     1000
10   - Gt         3000  3001  2750
11   - GotoF      2750  -     14
12   - Assignment 3000  -     1001
13   - Goto       -     -     15
14   - Assignment 3001  -     1001
15   - Eq         3000  3000  2750
16   - GotoF      2750  -     18
17   - Assignment 3000  -     1002
18   - Print      1000  -     -
19   - Print      1001  -     -
20   - Print      1002  -     -
21   - PrintNl    -     -     -
22   - End        -     -     -

